Fix map clipping - WIP

--- a/frontend/scripts/react-components/explore/explore.scss
+++ b/frontend/scripts/react-components/explore/explore.scss
@@ -1,7 +1,24 @@
 @import 'styles/settings';
 
+$top-cards-height: 156px;
+
 .c-tool-selector {
   margin-top: $nav-height;
+
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - #{$top-cards-height});
+
+  .row{
+    flex: 0;
+  }
+
+  .map-row {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+  }
 
   .tool-selector-grid-container {
     display: flex;
@@ -18,5 +35,9 @@
 
   .c-grid-list-item {
     width: 120px;
+  }
+
+  .map-container {
+    height: 460px;
   }
 }
